yr testing on live sited

--- a/index.html
+++ b/index.html
@@ -438,7 +438,9 @@
 
         <div class="connect_right">
 
-            <form action="https://formspree.io/f/xdkldgeg" method="POST">
+       <form action="https://submify.vercel.app/eshalfatima4150@gmail.com" method="POST" >      
+            <input type="hidden" name="_next" value="abc.html">
+            <input type="hidden" name="_template" value="table">
                 <div class="connect_name">
                     <label>
                         <h3 class="form_label">Your Name</h3>
