yr zara confirm

--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
             <div class="nav">
                 <a href="#" class="Home">Home</a>
                 <a href="#about_me" class="Aboutme">About Me</a>
-                <!-- <a href="#latest_work" class="Contact">Latest Work</a> -->
-                <a href="#certificationspart" class="Skills">Certifications</a>
-                <a href="#workexperience" class="Experience">Experience</a>
                 <a href="#my_services" class="Services">Services</a>
+                <a href="#workexperience" class="Experience">Experience</a>
+                <a href="#certificationspart" class="Skills">Certifications</a>
                 <a href="#connect-contact-me" class="Contact">Contact</a>
             </div>
             <div class="outer_conme_div">
@@ -144,22 +143,103 @@
 
         </div>
     </div>
-    <!-- latest workk -->
+    <h1 id="my_services">Services</h1>
+    <div class="outer_services_div">
+        <div class="inner_services_div">
+            <div class="service1box">
+                <h3>01</h3>
+                <h2>Web Developing</h2>
+                <p class="services_caption">
+                    Clean, responsive, and modern websites built with HTML & CSS for a seamless user experience
+                </p>
+                <p class="services_readmore">Read More</p>
+                <i class="fa-solid fa-arrow-right"></i>
+            </div>
 
-    <!-- <section>
-        <h1 id="latest_work">My Latest Work</h1>
-    </section>
-      <div>
-        <div class="latestworkweb">
+            <div class="service1box">
+                <h3>02</h3>
+                <h2>Youtube SEO</h2>
+                <p class="services_caption">
+                    Optimize your videos with keywords, tags, and strategies to boost rankings and reach more viewers
+                </p>
+                <p class="services_readmore">Read More</p>
+                <i class="fa-solid fa-arrow-right"></i>
+            </div>
 
+            <div class="service1box">
+                <h3>03</h3>
+                <h2>Content Writing</h2>
+                <p class="services_caption">
+                    Engaging and well-structured content tailored to your audience for blogs, websites, and social media
+                </p>
+                <p class="services_readmore">Read More</p>
+                <i class="fa-solid fa-arrow-right"></i>
+            </div>
+
+            <div class="service1box">
+                <h3>04</h3>
+                <h2>Handling Projects</h2>
+                <p class="services_caption">
+                    Efficiently handling projects from planning to delivery, ensuring timely completion and quality
+                    results
+                </p>
+                <p class="services_readmore">Read More</p>
+                <i class="fa-solid fa-arrow-right"></i>
+            </div>
         </div>
-      </div>
+    </div>
+<!-- Work experience here -->
+<h1 class="workExperience" id="workexperience">My Experience</h1>
 
-    <div class="latest_wok_outer_div">
-        
-    </div> -->
+<div class="experience-container">
+    <!-- University Society Experience -->
+    <div class="experience-box">
+        <div class="experience-header">
+            <h2 class="experience-title">Press Secretary</h2>
+            <div class="experience-meta">
+                <h3 class="experience-company">Qiraat & Naat Club - University of Agriculture Faisalabad</h3>
+                <p class="experience-duration">1 Year</p>
+            </div>
+        </div>
+        <ul class="experience-list">
+            <li class="experience-item">Managed press releases and media communications</li>
+            <li class="experience-item">Created promotional content for events</li>
+            <li class="experience-item">Maintained social media presence</li>
+        </ul>
+    </div>
 
+    <!-- Current Internship -->
+    <div class="experience-box">
+        <div class="experience-header">
+            <h2 class="experience-title">PR & Reels Manager Intern</h2>
+            <div class="experience-meta">
+                <h3 class="experience-company">ZeTech Assistance – NICF Faisalabad</h3>
+                <p class="experience-duration">Ongoing (2nd month)</p>
+            </div>
+        </div>
+        <ul class="experience-list">
+            <li class="experience-item">Creating and managing social media content</li>
+            <li class="experience-item">Supporting PR and digital campaigns</li>
+            <li class="experience-item">Coordinating small projects</li>
+        </ul>
+    </div>
 
+    <!-- Volunteer Experience -->
+    <div class="experience-box">
+        <div class="experience-header">
+            <h2 class="experience-title">Project Manager (Volunteer)</h2>
+            <div class="experience-meta">
+                <h3 class="experience-company">Banoqabil Online Courses</h3>
+                <p class="experience-duration">3 Months</p>
+            </div>
+        </div>
+        <ul class="experience-list">
+            <li class="experience-item">Assisted in launching online courses</li>
+            <li class="experience-item">Coordinated between teams for content delivery</li>
+            <li class="experience-item">Monitored project timelines</li>
+        </ul>
+    </div>
+</div>
     <h1 class="certificatesand" id="certificationspart">My Certifications</h1>
 
     <H2 class="my-specializations">Professional Certifications</H2>
@@ -368,52 +448,6 @@
             <p class="isued_by2">Issued by: Ignite, Virtual<br> University, Government</p>
         </div>
 
-    </div>
-    <!-- services part start -->
-    <h1 id="my_services">Services</h1>
-    <div class="outer_services_div">
-        <div class="inner_services_div">
-            <div class="service1box">
-                <h3>01</h3>
-                <h2>Web Developing</h2>
-                <p class="services_caption">
-                    Clean, responsive, and modern websites built with HTML & CSS for a seamless user experience
-                </p>
-                <p class="services_readmore">Read More</p>
-                <i class="fa-solid fa-arrow-right"></i>
-            </div>
-
-            <div class="service1box">
-                <h3>02</h3>
-                <h2>Youtube SEO</h2>
-                <p class="services_caption">
-                    Optimize your videos with keywords, tags, and strategies to boost rankings and reach more viewers
-                </p>
-                <p class="services_readmore">Read More</p>
-                <i class="fa-solid fa-arrow-right"></i>
-            </div>
-
-            <div class="service1box">
-                <h3>03</h3>
-                <h2>Content Writing</h2>
-                <p class="services_caption">
-                    Engaging and well-structured content tailored to your audience for blogs, websites, and social media
-                </p>
-                <p class="services_readmore">Read More</p>
-                <i class="fa-solid fa-arrow-right"></i>
-            </div>
-
-            <div class="service1box">
-                <h3>04</h3>
-                <h2>Handling Projects</h2>
-                <p class="services_caption">
-                    Efficiently handling projects from planning to delivery, ensuring timely completion and quality
-                    results
-                </p>
-                <p class="services_readmore">Read More</p>
-                <i class="fa-solid fa-arrow-right"></i>
-            </div>
-        </div>
     </div>
     <!-- conect with me section -->
     <h1 id="connect-contact-me">Get in touch</h1>
