yr zara confirm

--- a/index.html
+++ b/index.html
@@ -191,57 +191,48 @@
 <!-- Work experience here -->
 <h1 class="workExperience" id="workexperience">My Experience</h1>
 
-<div class="experience-container">
+<div class="experience-boxes">
     <!-- University Society Experience -->
-    <div class="experience-box">
-        <div class="experience-header">
-            <h2 class="experience-title">Press Secretary</h2>
-            <div class="experience-meta">
-                <h3 class="experience-company">Qiraat & Naat Club - University of Agriculture Faisalabad</h3>
-                <p class="experience-duration">1 Year</p>
-            </div>
-        </div>
-        <ul class="experience-list">
-            <li class="experience-item">Managed press releases and media communications</li>
-            <li class="experience-item">Created promotional content for events</li>
-            <li class="experience-item">Maintained social media presence</li>
+    <div class="exp-box">
+        <div class="exp-icon">🏛️</div>
+        <h2 class="exp-title">Press Secretary</h2>
+        <h3 class="exp-company">Qiraat & Naat Club</h3>
+        <p class="exp-duration">1 Year</p>
+        <ul class="exp-points">
+            <li>Media communications</li>
+            <li>Event promotion</li>
+            <li>Social media management</li>
         </ul>
     </div>
 
     <!-- Current Internship -->
-    <div class="experience-box">
-        <div class="experience-header">
-            <h2 class="experience-title">PR & Reels Manager Intern</h2>
-            <div class="experience-meta">
-                <h3 class="experience-company">ZeTech Assistance – NICF Faisalabad</h3>
-                <p class="experience-duration">Ongoing (2nd month)</p>
-            </div>
-        </div>
-        <ul class="experience-list">
-            <li class="experience-item">Creating and managing social media content</li>
-            <li class="experience-item">Supporting PR and digital campaigns</li>
-            <li class="experience-item">Coordinating small projects</li>
+    <div class="exp-box">
+        <div class="exp-icon">🎬</div>
+        <h2 class="exp-title">PR & Reels Manager</h2>
+        <h3 class="exp-company">ZeTech Assistance</h3>
+        <p class="exp-duration">Ongoing</p>
+        <ul class="exp-points">
+            <li>Social media content</li>
+            <li>Digital campaigns</li>
+            <li>Project coordination</li>
         </ul>
     </div>
 
     <!-- Volunteer Experience -->
-    <div class="experience-box">
-        <div class="experience-header">
-            <h2 class="experience-title">Project Manager (Volunteer)</h2>
-            <div class="experience-meta">
-                <h3 class="experience-company">Banoqabil Online Courses</h3>
-                <p class="experience-duration">3 Months</p>
-            </div>
-        </div>
-        <ul class="experience-list">
-            <li class="experience-item">Assisted in launching online courses</li>
-            <li class="experience-item">Coordinated between teams for content delivery</li>
-            <li class="experience-item">Monitored project timelines</li>
+    <div class="exp-box">
+        <div class="exp-icon">🚀</div>
+        <h2 class="exp-title">Project Manager</h2>
+        <h3 class="exp-company">Banoqabil Courses</h3>
+        <p class="exp-duration">3 Months</p>
+        <ul class="exp-points">
+            <li>Course launch support</li>
+            <li>Team coordination</li>
+            <li>Timeline management</li>
         </ul>
     </div>
 </div>
     <h1 class="certificatesand" id="certificationspart">My Certifications</h1>
-
+ 
     <H2 class="my-specializations">Professional Certifications</H2>
 
 
