yr zara confirm

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <h3 class="exp-company">Banoqabil Courses</h3>
         <p class="exp-duration">3 Months</p>
         <ul class="exp-points">
-            <li>Course launch support</li>
+            <li>Volunteeer Assistance</li>
             <li>Team coordination</li>
             <li>Timeline management</li>
         </ul>
