--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
                     </div>
                 </div>
                 <div class="skill">
-                    <p>Data Analysis</p>
+                    <p>Javascript</p>
                     <div class="skill-bar">
-                        <div class="fill" style="width: 65%;"></div>
+                        <div class="fill" style="width: 35%;"></div>
                     </div>
                 </div>
                 <div class="skill">
