data analysis removed javascript data added

--- a/index.html
+++ b/index.html
@@ -192,9 +192,24 @@
 <h1 class="workExperience" id="workexperience">My Experience</h1>
 
 <div class="experience-boxes">
+
+
+        <!-- Current Internship -->
+    <div class="exp-box">
+        <!-- <div class="exp-icon">🎬</div> -->
+        <h2 class="exp-title">PR & Reels Manager</h2>
+        <h3 class="exp-company">NICF</h3>
+        <p class="exp-duration">Ongoing</p>
+        <ul class="exp-points">
+            <li>Social media content</li>
+            <li>Digital campaigns</li>
+            <li>Project coordination</li>
+        </ul>
+    </div>
+
     <!-- University Society Experience -->
     <div class="exp-box">
-        <div class="exp-icon">🏛️</div>
+        <!-- <div class="exp-icon">🏛️</div> -->
         <h2 class="exp-title">Press Secretary</h2>
         <h3 class="exp-company">Qiraat & Naat Club</h3>
         <p class="exp-duration">1 Year</p>
@@ -205,22 +220,10 @@
         </ul>
     </div>
 
-    <!-- Current Internship -->
-    <div class="exp-box">
-        <div class="exp-icon">🎬</div>
-        <h2 class="exp-title">PR & Reels Manager</h2>
-        <h3 class="exp-company">ZeTech Assistance</h3>
-        <p class="exp-duration">Ongoing</p>
-        <ul class="exp-points">
-            <li>Social media content</li>
-            <li>Digital campaigns</li>
-            <li>Project coordination</li>
-        </ul>
-    </div>
 
     <!-- Volunteer Experience -->
     <div class="exp-box">
-        <div class="exp-icon">🚀</div>
+        <!-- <div class="exp-icon">🚀</div> -->
         <h2 class="exp-title">Project Manager</h2>
         <h3 class="exp-company">Banoqabil Courses</h3>
         <p class="exp-duration">3 Months</p>
