yar my final love wala push  8 / 2 / 2026

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <header class="header_head">
         <div class="header_div">
 
-            <img src="logor.png" class="header_namelogo">
-            <button class="menu-toggle">
+            <!-- <img src="logor.png" class="header_namelogo"> -->
+            <!-- <button class="menu-toggle">
                 <i class="fas fa-bars"></i>
             </button>
             <button class="close-menu">
                 <i class="fas fa-times"></i>
-            </button>
+            </button> -->
             <div class="nav">
                 <a href="#" class="Home">Home</a>
                 <a href="#about_me" class="Aboutme">About Me</a>
@@ -195,6 +195,20 @@
 
 
         <!-- Current Internship -->
+
+
+            <div class="exp-box">
+        <!-- <div class="exp-icon">🎬</div> -->
+        <h2 class="exp-title">Front-end Developer</h2>
+        <h3 class="exp-company">Commco</h3>
+        <p class="exp-duration">Jan 2025 - March 2025</p>
+        <ul class="exp-points">
+            <li>UI design (HTML, CSS, and JavaScript)</li>
+            <li>Responsive layout</li>
+            <li>Bug fixing</li>
+        </ul>
+    </div>
+
     <div class="exp-box">
         <!-- <div class="exp-icon">🎬</div> -->
         <h2 class="exp-title">PR & Reels Manager</h2>
@@ -211,8 +225,8 @@
     <div class="exp-box">
         <!-- <div class="exp-icon">🏛️</div> -->
         <h2 class="exp-title">Press Secretary</h2>
-        <h3 class="exp-company">Qiraat & Naat Club</h3>
-        <p class="exp-duration">1 Year</p>
+        <h3 class="exp-company">QNC - UAF</h3>
+        <p class="exp-duration">Sep 2024 - Oct 2025</p>
         <ul class="exp-points">
             <li>Media communications</li>
             <li>Event promotion</li>
@@ -225,8 +239,8 @@
     <div class="exp-box">
         <!-- <div class="exp-icon">🚀</div> -->
         <h2 class="exp-title">Project Manager</h2>
-        <h3 class="exp-company">Banoqabil Courses</h3>
-        <p class="exp-duration">3 Months</p>
+        <h3 class="exp-company">Banoqabil Faisalabad</h3>
+        <p class="exp-duration">July 2025 - Oct 2025</p>
         <ul class="exp-points">
             <li>Volunteeer Assistance</li>
             <li>Team coordination</li>
@@ -441,7 +455,7 @@
             <a class="certificate_links" href="https://digiskills.pk/verify/" target="_blank">View Certificate</a>
             <p class="isued_by2">Issued by: Ignite, Virtual<br> University, Government</p>
         </div>
-
+17 18 20 21
     </div>
     <!-- conect with me section -->
     <h1 id="connect-contact-me">Get in touch</h1>
